--- a/package.json
+++ b/package.json
@@ -1,30 +1,51 @@
 {
-  "name": "@comitter/cli",
-  "version": "0.0.1",
-  "description": "Cli for commiter tool",
+  "name": "@comitify/cli",
+  "version": "0.2.4",
+  "description": "Cli for comitify tool",
   "main": "dist/index.js",
-  "author": "rioukkevin",
-  "license": "None",
   "scripts": {
     "build": "bun run build.mjs"
+  },
+  "bin": {
+    "comitify": "dist/index.js"
   },
   "files": [
     "dist"
   ],
   "exports": {
-    ".": "./dist/index.js"
+    ".": "./dist/index.mjs"
   },
   "dependencies": {
-    "@comitter/shared": "link:@comitter/shared",
-    "ink": "^5.0.1",
-    "prompts": "^2.4.2",
-    "react": "^18.3.1"
+    "@comitify/shared": "0.2.4",
+    "clipboardy": "^4.0.0",
+    "prompts": "2.4.2"
   },
   "devDependencies": {
     "@types/bun": "1.1.6",
-    "@types/prompts": "^2.4.9",
-    "@types/react": "^18.3.3",
+    "@types/prompts": "2.4.9",
     "bun-plugin-dts": "0.2.3",
+    "semver": "7.6.3",
     "typescript": "5.5.4"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Commitify/cli.git"
+  },
+  "keywords": [
+    "comitify",
+    "commit",
+    "git",
+    "cli",
+    "tool"
+  ],
+  "author": "Comitify <comitify.dev@gmail.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Commitify/cli/issues"
+  },
+  "homepage": "https://github.com/Commitify/cli",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
   }
 }
